# capp

./: CMakeLists.txt  MyApp.cxx  MyAppConfig.h.in  readme.md
MyMath/: CMakeLists.txt  MyMath.cxx  MyMath.h
scripts/: build.bat  init.bat  run.bat
